--- a/members.css
+++ b/members.css
@@ -6,7 +6,7 @@
 .hero{
     width: 100%;
     height: 100%;
-    background-image: url(background.png);
+    background-image: url(background.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
