--- a/outputs.css
+++ b/outputs.css
@@ -50,7 +50,7 @@ a .fa{
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(background.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(background.jpg);
     background-size: contain;
     background-position: center;
 }
