--- a/style.css
+++ b/style.css
@@ -34,19 +34,46 @@
     transform: translateY(-50%);
     z-index: 2;
 }
-  button{
-    color: #fbfcfd;
-    padding: 10px 25px;
+button{
+    width: 200px;
+    padding: 15px 0;
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 25px;
+    font-weight: bold;
+    border: 2px solid #009688;
     background: transparent;
-    border: 1px solid #fff;
-    border-radius: 20px;
-    outline: none;
-    cursor: pointer;   
-   }
-   a{
+    color: #fff;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+span{
+    background: skyblue;
+    height: 100%;
+    width: 0;
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.5s;
+}
+button:hover span{
+    width: 100%;
+}
+button:hover{
+    border: none;
+}
+a {
     text-decoration: none;
-    color: white;
-   }
+    color: #fff; /* Change text color to black */   
+}
+
+a {
+    text-decoration: none;
+}
+
 h1{
     font-size: 80px;
     margin: 20px 0;
@@ -146,4 +173,28 @@ h1{
 }
 .embed iframe {
     display: none;
+}
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    position: relative;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+}
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width: 0;
+    background: #009688;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.5s;
+}
+.navbar ul li:hover::after{
+    width: 100%;
 }
