--- a/outputs.css
+++ b/outputs.css
@@ -49,7 +49,6 @@ a .fa{
 }
 .banner {
     width: 100%;
-    height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(background.jpg);
     background-size: contain;
     background-position: center;
@@ -101,6 +100,7 @@ a .fa{
 }
 body {
     overflow-x: hidden;
+    overflow-y: auto;
 }
 .dark-blue {
     color: #002f6c; /* Darkest shade of blue */
@@ -133,4 +133,49 @@ body {
     width: 100%;
     position: fixed;
     z-index: 100;
+}
+
+
+.contain{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.gallery{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.img-box{
+    width: 100px;
+    height: 500px;
+    margin: 10px;
+    border-radius: 50px;
+    background: url(img3.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    transition: width 0.5s;
+}
+.img-box:nth-child(2){
+    background: url(img1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.img-box h3{
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 30px;
+    opacity: 0;
+    transition: bottom 0.5s, opacity 0.5s;
+}
+.img-box:hover{
+    width: 600px;
+    cursor: pointer;
+}
+.img-box:hover h3{
+    opacity: 1;
+    bottom: 25px;
 }
